package com.wsr.katanarecorder.db

/*
*
* key: 項目名
* value: 値
* type: ViewType
*
* */

data class KatanaValue(
    var key: String,
    var value: String,
    var type: Int
)