@startuml
entity "katana_data_table"{
    + id [PK]
    title: String
    imageName: String?
    katanaData: List<KatanaValue>
}

note left
    title:表示される名前
    imageName:表示する画像の名前
    katanaData:カラム名と値と編集タイプを持つ型
end note

entity "katana_data_tag_table"{
    + id [PK]
    #katanaDataId [FK(katana_data, id)]
    #tagId[FK(tag, id)]
}

note left
    katana_data_tableとtag_tableの中間テーブル
end note

entity "tag_table"{
    + id [PK]
    name: String
    color: String
}

note left
    name:タグの内容
    color:タグの色
end note

entity "KatanaValue"{
    key: String
    value: String
    type: Int
}

note left
    key:項目名
    value:値
    type:編集画面でのViewTypeを指定するやつ
end note

KatanaValue -[hidden]do- katana_data_table

katana_data_table}o--o{katana_data_tag_table
katana_data_tag_table}o--o{tag_table

@enduml